package com.naosim.dddwork.domain;

public interface WorkTimeOfDay {

    WorkMinute getWorkMinute();

    WorkMinute getOverWorkMinute();
}
