package com.naosim.dddwork.domain;

public interface WorkTimeOfMonth {

    WorkMinute getTotalWorkMinute();

    WorkMinute getTotalOverWorkMinute();
}
