@startuml

package api {

    class  AttendanceController <<Controller>> {
        + void command(String[] args)
        - void input(String date, String start, String end)
        - String total(String yearMonth)
    }

    ~class AttendanceArgumentParser {
        ~ LocalDate parseToLocalDate(String value)
        ~ TimePoint parseToTimePoint(String value)
        ~ YearMonth parseToYearMonth(String value)
    }
}

package service {

    class  AttendanceService <<Service>> {
        + void saveAttendance(LocalDate date, TimePoint startTime, TimePoint endTime)
        + AttendanceSummary fetchAttendanceSummary(YearMonth yearMonth)
    }

    ~class WorkRegulationValidator <<Service>> {
        '~ String validateWorkTime(TimePoint startTime, TimePoint endTime, WorkRegulation workRegulation)
        ~ String validateWorkTime(...)
    }

    ~class WorkMinuteCalculator <<Service>> {
        '~ WorkTimeOfDay calculateOfDay(TimePoint startTime, TimePoint endTime, WorkRegulation workRegulation)
        '~ WorkTimeOfMonth calculateOfMonth(List<WorkTimeOfDay> workTimeOfDays)
        ~ WorkTimeOfDay calculateOfDay(...)
        ~ WorkTimeOfMonth calculateOfMonth(...)
    }
}

package datasource {

    class  AttendanceRepositoryCsv <<Datasource>> {
        + void save(Attendance attendance)
        + List<Attendance> fetchMonthly(YearMonth yearMonth)
    }

    class CsvSetting <<Setting>> {
        ~ String filepath
    }

    class FileIOHelper <<Component>> {
        ~ void writeLines(String filepath, List<String> lines)
        ~ List<String> readLines(String filepath)
    }

    class WorkRegulationRepositoryDefault <<Datasource>> {
        + WorkRegulation fetchDefault()
    }
}

package domain {

    class Attendance <<Entity>> {
        LocalDate date;
        TimePoint startTime;
        TimePoint endTime;
        WorkMinute workMinute;
        WorkMinute overWorkMinute;
        LocalDate createAt;
    }

    interface AttendanceRepository <<Service>> {
        + void save(Attendance attendance)
        + List<Attendance> fetchMonthly(YearMonth yearMonth)
    }

    class AttendanceSummary <<Entity>> {
        YearMonth yearMonth;
        WorkMinute totalWorkMinute;
        WorkMinute totalOverWorkMinute;
    }

    class TimePoint <<ValueObject>> {
        int hour
        int minute
        + int toMinuteValue()
        + boolean isBefore(TimePoint timePoint)
        + boolean isAfter(TimePoint timePoint)
    }

    class TimeRange <<Entity>> {
        TimePoint startTime
        TimePoint endTime
    }

    class WorkMinute <<ValueObject>> {
        int value
    }

    class WorkRegulation <<Entity>> {
        TimePoint standardStartTime;
        TimePoint minStartTime;
        TimePoint maxStartTime;
        TimePoint standardEndTime;
        TimePoint minEndTime;
        TimePoint maxEndTime;
        ImmutableList<TimeRange> restTimes;
        WorkMinute standardWorkMinute;
    }

    interface WorkRegulationRepository <<Service>> {
        + WorkRegulation fetchDefault()
    }

    interface WorkTimeOfDay {
        + WorkMinute getWorkMinute()
        + WorkMinute getOverWorkMinute()
    }

    interface WorkTimeOfMonth {
        + WorkMinute getTotalWorkMinute()
        + WorkMinute getTotalOverWorkMinute()
    }

    class YearMonth <<ValueObject>> {
        int year;
        int month;
    }

    ' Auto Generated

    class AttendanceBuilder {
        Attendance build(...)
    }

    class AttendanceSummaryBuilder {
        AttendanceSummary build(...)
    }

    class WorkRegulationBuilder {
        WorkRegulation build(...)
    }
}


''' api
AttendanceController --> AttendanceArgumentParser
AttendanceController --> AttendanceService


''' service
AttendanceService --> AttendanceRepository
AttendanceService --> WorkRegulationValidator
AttendanceService --> WorkMinuteCalculator
AttendanceService --> WorkRegulationRepository


''' datasource
AttendanceRepositoryCsv --|> AttendanceRepository
AttendanceRepositoryCsv --> CsvSetting
AttendanceRepositoryCsv --> FileIOHelper
WorkRegulationRepositoryDefault --|> WorkRegulationRepository


''' domain
Attendance --|> WorkTimeOfDay
AttendanceSummary --|> WorkTimeOfMonth
AttendanceBuilder ..> Attendance : <<Create>>
AttendanceSummaryBuilder ..> AttendanceSummary : <<Create>>
WorkRegulationBuilder ..> WorkRegulation : <<Create>>


''' placement order
WorkRegulationRepository -[hidden] AttendanceRepository
AttendanceRepository -[hidden]- AttendanceBuilder
WorkRegulationBuilder -[hidden] AttendanceBuilder
AttendanceBuilder -[hidden] AttendanceSummaryBuilder

WorkRegulation -[hidden] Attendance
Attendance -[hidden] AttendanceSummary
WorkTimeOfDay -[hidden] WorkTimeOfMonth
WorkRegulation -[hidden]- TimeRange
TimeRange -[hidden]- TimePoint
TimePoint -[hidden] WorkMinute
WorkMinute -[hidden] YearMonth

@enduml
